--- a/src/css/contact.scss
+++ b/src/css/contact.scss
@@ -27,14 +27,22 @@
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
+            align-items: center;
             flex-direction: column-reverse;
-            width: 50rem;
+            width: 75%;
 
+            .titleHrLine1 {
+                background-color: rgb(255, 255, 255);
+                height: 2px;
+                margin: 0.25rem;
+                width: 60%;
+                margin-left: 40%;
+            }
             .titleHrLine2 {
                 background-color: rgb(255, 255, 255);
                 height: 2px;
-                margin: 1rem;
-                width: 100%;
+                margin: 0.25rem;
+                width: 60%;
             }
         }
     }
