--- a/src/css/skills.scss
+++ b/src/css/skills.scss
@@ -63,9 +63,10 @@
 
                 .hex {
                     margin: 0 0.5rem;
+
+                    align-self: center;
                     height: 11rem;
                     width: 11rem;
-                    align-self: center;
 
                     display: flex;
                     justify-content: center;
@@ -89,20 +90,13 @@
                     // );
                     transition: transform 0.3s, height 0.3s, width 0.3s,
                         background 0.3s;
-
-                    .logo_img {
-                        width: 7rem;
-                    }
-
-                    .keras {
-                        width: 5.5rem;
-                    }
                 }
 
                 .hex:hover {
                     width: 12rem;
                     height: 12rem;
                     background: white;
+                    margin: 0;
                 }
 
                 .empty-1 {
@@ -164,6 +158,7 @@
                     width: 12rem;
                     height: 12rem;
                     background: white;
+                    margin: 0;
                 }
 
                 .empty-2 {
@@ -224,6 +219,7 @@
                     width: 12rem;
                     height: 12rem;
                     background: white;
+                    margin: 0;
                 }
 
                 .empty-0 {
