Completed basic application

--- a/src/App.css
+++ b/src/App.css
@@ -837,3 +837,112 @@
 }
 
 /* fade effect in techstack end */
+
+/* line animation begin */
+
+#lineh1 {
+    position: absolute;
+    left: 0;
+    height: 2px;
+    bottom: 5rem;
+    background: #5500aa;
+    animation: lineH 4s 5s infinite linear;
+}
+#lineh2 {
+    position: absolute;
+    left: 0;
+    bottom: 10rem;
+    height: 2px;
+    background: #aa2b00;
+    animation: lineH 5s 0.5s infinite linear;
+}
+#lineh3 {
+    position: absolute;
+    left: 0;
+    bottom: 15rem;
+    height: 2px;
+    background: #00d4ff;
+    animation: lineH 5s 2s infinite linear;
+}
+#lineh4 {
+    position: absolute;
+    right: 0;
+    bottom: 17rem;
+    height: 2px;
+    background: #00aa2b;
+    animation: lineH 5s 1s infinite linear;
+}
+#lineh5 {
+    position: absolute;
+    left: 0;
+    bottom: 20rem;
+    height: 2px;
+    background: #aa8000;
+    animation: lineH 5s 4s infinite linear;
+}
+#lineh6 {
+    position: absolute;
+    right: 0;
+    bottom: 22rem;
+    height: 2px;
+    background: #aaff00;
+    animation: lineH 4s 1s infinite linear;
+}
+#lineh7 {
+    position: absolute;
+    right: 0;
+    bottom: 25rem;
+    height: 2px;
+    background: #d50055;
+    animation: lineH 4s 0s infinite linear;
+}
+#lineh8 {
+    position: absolute;
+    left: 0;
+    bottom: 28rem;
+    height: 2px;
+    background: #00ffff;
+    animation: lineH 4s 1.5s infinite linear;
+}
+#lineh9 {
+    position: absolute;
+    left: 0;
+    bottom: 32rem;
+    height: 2px;
+    background: #2b002b;
+    animation: lineH 5s 2s infinite linear;
+}
+#lineh10 {
+    position: absolute;
+    right: 0;
+    bottom: 35rem;
+    height: 2px;
+    background: #005580;
+    animation: lineH 4s 3s infinite linear;
+}
+#lineh11 {
+    position: absolute;
+    right: 0;
+    bottom: 37rem;
+    height: 2px;
+    background: #ff557f;
+    animation: lineH 4s 1s infinite linear;
+}
+#lineh12 {
+    position: absolute;
+    right: 0;
+    bottom: 39rem;
+    height: 2px;
+    background: #85b085;
+    animation: lineH 6s 1s infinite linear;
+}
+@keyframes lineH {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 95%;
+        opacity: 0;
+    }
+}
+/* line animation end */
