image render fixed

--- a/src/css/contact.scss
+++ b/src/css/contact.scss
@@ -1,4 +1,5 @@
 .contactSection {
+    padding-top: 4rem;
     height: 90vh;
     color: white;
     // width: 100%;
@@ -133,7 +134,7 @@
             height: 50%;
             left: -30rem;
             position: absolute;
-            bottom: 28.75rem;
+            bottom: 27rem;
             background: #000;
         }
 
@@ -180,7 +181,7 @@
             flex-direction: column;
             align-items: center;
             position: absolute;
-            bottom: 14rem;
+            bottom: 12rem;
             z-index: 2;
         }
 
