--- a/src/css/projects.scss
+++ b/src/css/projects.scss
@@ -1,5 +1,5 @@
 .projectContainer {
-    padding: 10vh 0;
+    padding-top: 10vh;
     height: 100vh;
     width: 100%;
 
@@ -20,10 +20,11 @@
     }
 
     .pageContentDiv {
-        margin-top: 2rem;
+        margin-top: 0.5%;
         z-index: 2;
         display: flex;
         width: 100%;
+        height: 100%;
         align-items: center;
         justify-content: center;
 
@@ -33,12 +34,13 @@
             // flex-direction: column;
             // flex-wrap: wrap;
             width: 100%;
+            height: 100%;
             display: grid;
-            grid-template-columns: 32rem 32rem 32rem;
-            grid-template-rows: 16rem 16rem;
+            grid-template-columns: 30vw 30vw 30vw;
+            grid-template-rows: 30vh 30vh;
             justify-content: center;
             align-items: center;
-            gap: 4rem;
+            gap: 2vw;
 
             .projectBox {
                 color: black;
@@ -50,7 +52,6 @@
                 padding-right: 0;
                 padding-bottom: 0;
                 display: flex;
-
                 justify-content: space-between;
                 align-items: center;
 
@@ -61,32 +62,44 @@
                     height: 100%;
                     border-radius: 2rem;
                     opacity: 0.7;
+                    transition: all 0.3s ease-in-out;
 
                     img {
                         position: absolute;
-                        top: 2rem;
+                        top: 2vh;
                         right: -5rem;
                         width: 18rem;
+                        height: 18rem;
+                        scale: 0.8;
+                        transition: all 0.3s ease-in-out;
                     }
 
                     .IMDB {
                         transform: scaleX(-1);
                         transform: scaleY(-1);
+                        transition: all 0.3s ease-in-out;
                     }
 
                     .Hate {
                         transform: scaleX(1);
                         transform: scaleY(1);
+                        transition: all 0.3s ease-in-out;
                     }
 
                     .Econ {
                         width: 23rem;
                         right: -3rem;
                         transform: scaleX(-1);
+                        transition: all 0.3s ease-in-out;
                     }
                     .Object,
                     .Employ {
                         right: -3rem;
+                        top: 0;
+                        transition: all 0.3s ease-in-out;
+                    }
+
+                    .plus {
                         top: 1rem;
                     }
                 }
@@ -94,23 +107,25 @@
                 &:hover {
                     .imageDiv {
                         opacity: 1;
+                        transition: all 0.3s ease-in-out;
 
                         img {
-                            scale: 1.15;
-                            right: -2.5rem;
-                            top: 3rem;
+                            scale: 1;
+                            top: 2vh;
+                            transition: all 0.3s ease-in-out;
                         }
 
-                        .Object {
-                            scale: 1.1;
-                            top: 1.5rem;
+                        .Object,
+                        .Employ {
+                            scale: 1;
+                            top: 0;
+                            transition: all 0.3s ease-in-out;
+                        }
+                        .plus {
+                            scale: 0.9;
+                            top: 1rem;
                         }
                     }
-                }
-
-                .rightArrow {
-                    width: 1.25rem;
-                    height: 1.25rem;
                 }
 
                 .projectInfo {
@@ -121,14 +136,14 @@
                     width: 100%;
                     height: 25%;
                     .project-title {
-                        font-size: 1.3rem;
+                        font-size: 1.1rem;
                         font-weight: 600;
                     }
 
                     .project-skills {
                         display: flex;
                         flex-wrap: wrap;
-                        width: 30rem;
+                        width: 28vw;
                         margin: 0.75rem 0;
 
                         .skill-span {
@@ -138,23 +153,22 @@
                             margin-bottom: 0.25rem;
                             min-width: 6rem;
                             text-align: center;
-                            font-size: 0.7rem;
+                            font-size: 0.6rem;
                             border: 0.1rem solid black;
-                            background-color: rgb(255, 255, 255, 0.4);
+                            background-color: rgba(255, 255, 255, 0.755);
                             border-radius: 0.3rem;
                         }
                     }
 
                     .github-btn {
-                        width: 5rem;
                         position: absolute;
-                        bottom: 2rem;
+                        bottom: 1rem;
                         text-decoration: none;
                         color: black;
 
                         .socialIconItem {
-                            width: 2rem;
-                            height: 2rem;
+                            width: 1.75rem;
+                            height: 1.75rem;
                         }
                     }
                 }
@@ -222,11 +236,11 @@
         align-items: center;
         justify-content: center;
         display: flex;
-        padding: 2rem 4.5rem;
+        padding: 2.5%;
         flex-direction: column;
 
         .tabNames {
-            font-size: 2rem;
+            font-size: 1.5rem;
             font-weight: 600;
             letter-spacing: 2px;
             margin-left: 1rem;
@@ -239,18 +253,19 @@
             flex-direction: column;
             justify-content: space-evenly;
             flex-direction: column-reverse;
+            height: 100%;
             width: 75%;
 
             .titleHrLine1 {
                 background-color: rgb(254, 137, 205);
-                height: 2px;
+                height: 1.5px;
                 margin: 0.25rem;
                 width: 60%;
                 margin-left: 40%;
             }
             .titleHrLine2 {
                 background-color: rgb(137, 205, 254);
-                height: 2px;
+                height: 1.5px;
                 margin: 0.25rem;
                 width: 60%;
             }
