--- a/src/css/interests.scss
+++ b/src/css/interests.scss
@@ -1,6 +1,6 @@
 .InterestWrapper {
     width: 100%;
-    padding-top: 0;
+    padding-top: 10vh;
     height: 100vh;
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
@@ -14,8 +14,6 @@
         align-items: center;
         justify-self: center;
         width: 100%;
-        margin: 3rem 0;
-        margin-top: 8rem;
 
         z-index: 2;
 
@@ -24,13 +22,14 @@
             align-items: center;
             justify-content: center;
             display: flex;
-            padding: 2rem 4.5rem;
+            padding: 2.5%;
+
             flex-direction: column;
             z-index: 3;
             width: 100%;
 
             .tabNames {
-                font-size: 2rem;
+                font-size: 1.5rem;
                 font-weight: 600;
                 letter-spacing: 2px;
                 margin-left: 1rem;
@@ -47,14 +46,14 @@
 
                 .titleHrLine1 {
                     background-color: rgb(205, 254, 137);
-                    height: 2px;
+                    height: 1.5px;
                     margin: 0.25rem;
                     width: 60%;
                     margin-left: 40%;
                 }
                 .titleHrLine2 {
                     background-color: rgb(137, 205, 254);
-                    height: 2px;
+                    height: 1.5px;
                     margin: 0.25rem;
                     width: 60%;
                 }
@@ -70,27 +69,27 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                margin: 0 3rem;
+                margin: 0 2rem;
                 border: 1px solid black;
                 border-radius: 5%;
 
                 .titleforDiv {
-                    font-size: 1.5rem;
+                    font-size: 1rem;
                     font-weight: 600;
                     padding: 2rem;
                     padding-top: 0;
                 }
 
                 .ImageResize {
-                    width: 11rem;
+                    width: 9rem;
                     margin: 1rem 4rem;
-                    height: 11rem;
+                    height: 9rem;
                     display: flex;
                     align-items: center;
                     justify-content: center;
 
                     .IconImage {
-                        width: 12rem;
+                        width: 8rem;
                         filter: invert(1);
                         // height: 0rem;
                     }
@@ -130,10 +129,9 @@
         }
 
         .ContentContainer {
-            margin: 2rem;
+            margin: 1rem;
             border-radius: 1rem;
-
-            width: 70%;
+            width: 80%;
             height: 30vh;
             display: flex;
             justify-content: center;
@@ -143,7 +141,7 @@
                 display: flex;
                 justify-content: space-evenly;
                 align-items: center;
-                gap: 5rem;
+                gap: 3rem;
 
                 .details-1,
                 .details-2 {
@@ -153,8 +151,8 @@
                     gap: 2rem;
 
                     img {
-                        height: 100%;
-                        width: 100%;
+                        height: 10rem;
+
                         border-radius: 100%;
                     }
 
@@ -163,10 +161,10 @@
                         flex-direction: column;
                         align-items: flex-start;
                         gap: 0.5rem;
-                        font-size: 1.2rem;
+                        font-size: 0.8rem;
 
                         .Institute {
-                            font-size: 1.3rem;
+                            font-size: 1rem;
                             font-weight: 600;
                         }
                     }
@@ -175,8 +173,8 @@
 
             .Bookshelf {
                 overflow: hidden;
-                width: 67vw;
-                height: 18rem; // Adjust this as necessary to fit the content
+                width: 70rem;
+                height: 100%; // Adjust this as necessary to fit the content
                 display: flex;
                 justify-content: center;
                 align-items: center; // This will vertically center the slides
@@ -184,7 +182,7 @@
 
                 .swiper-button-next,
                 .swiper-button-prev {
-                    height: 1rem;
+                    scale: 0.5;
                     padding: 2rem;
                     position: static;
                     color: white;
@@ -198,7 +196,7 @@
                 /* Change button color on hover */
                 .swiper-button-next:hover,
                 .swiper-button-prev:hover {
-                    scale: 0.75;
+                    scale: 0.65;
                 }
 
                 .swiper-container {
@@ -212,7 +210,7 @@
                     height: auto; // Let the height grow with the content
 
                     img {
-                        width: 14rem; // Set a fixed width for the images
+                        width: 12rem; // Set a fixed width for the images
                         height: auto; // Let the height adjust to maintain aspect ratio
                         object-fit: contain;
                         border-radius: 3%;
