--- a/src/css/skills.scss
+++ b/src/css/skills.scss
@@ -1,5 +1,5 @@
 .skillsSection {
-    padding: 10vh 0;
+    padding-top: 10vh;
     height: 100vh;
     width: 100%;
     background-color: rgb(0, 0, 0);
@@ -16,11 +16,11 @@
             align-items: center;
             justify-content: center;
             display: flex;
-            padding: 2rem 4.5rem;
+            padding: 2.5%;
             flex-direction: column;
 
             .tabNames {
-                font-size: 2rem;
+                font-size: 1.5rem;
                 font-weight: 600;
                 letter-spacing: 2px;
                 margin-left: 1rem;
@@ -37,14 +37,14 @@
 
                 .titleHrLine1 {
                     background-color: rgb(254, 205, 137);
-                    height: 2px;
+                    height: 1.5px;
                     margin: 0.25rem;
                     width: 60%;
                     margin-left: 40%;
                 }
                 .titleHrLine2 {
                     background-color: rgb(205, 137, 254);
-                    height: 2px;
+                    height: 1.5px;
                     margin: 0.25rem;
                     width: 60%;
                 }
@@ -52,7 +52,8 @@
         }
 
         .skillContainer {
-            padding: 2.5rem 0;
+            height: 80vh;
+            padding: 2vh 0;
             .hex-layer-6 {
                 overflow: hidden;
                 display: grid;
@@ -60,15 +61,15 @@
                 margin: 0;
                 justify-content: center;
                 align-content: center;
-                height: 11rem;
+                height: 9rem;
                 overflow: visible;
 
                 .hex {
                     margin: 0 0.5rem;
 
                     align-self: center;
-                    height: 11rem;
-                    width: 11rem;
+                    height: 9rem;
+                    width: 9rem;
 
                     display: flex;
                     justify-content: center;
@@ -92,17 +93,21 @@
                     // );
                     transition: transform 0.3s, height 0.3s, width 0.3s,
                         background 0.3s;
+
+                    .logo_img {
+                        width: 5.5rem;
+                    }
                 }
 
                 .hex:hover {
-                    width: 12rem;
-                    height: 12rem;
+                    width: 10rem;
+                    height: 10rem;
                     background: white;
                     margin: 0;
                 }
 
                 .hex:hover .logo_img {
-                    width: 7.5rem;
+                    width: 6rem;
                 }
 
                 .empty-1 {
@@ -120,12 +125,12 @@
 
                 align-content: center;
                 grid-template-columns: repeat(11, 0fr);
-                height: 11rem;
+                height: 9rem;
                 overflow: visible;
 
                 .hex {
-                    height: 11rem;
-                    width: 11rem;
+                    width: 9rem;
+                    height: 9rem;
                     margin: 0 0.5rem;
                     align-self: center;
 
@@ -154,27 +159,27 @@
                         background 0.3s;
 
                     .logo_img {
-                        width: 7rem;
+                        width: 5.5rem;
                     }
 
                     .keras {
-                        width: 5.5rem;
+                        width: 5rem;
                     }
                 }
 
                 .hex:hover {
-                    width: 12rem;
-                    height: 12rem;
+                    width: 10rem;
+                    height: 10rem;
                     background: white;
                     margin: 0;
                 }
 
                 .hex:hover .logo_img {
-                    width: 7.5rem;
+                    width: 6rem;
                 }
 
                 .hex:hover .keras {
-                    width: 6.5rem;
+                    width: 5.5rem;
                 }
 
                 .empty-2 {
@@ -195,12 +200,12 @@
                 justify-content: center;
                 align-content: center;
                 grid-template-columns: repeat(10, 0fr);
-                height: 11rem;
+                height: 9rem;
                 overflow: visible;
 
                 .hex {
-                    height: 11rem;
-                    width: 11rem;
+                    width: 9rem;
+                    height: 9rem;
                     margin: 0 0.5rem;
                     align-self: center;
 
@@ -229,19 +234,19 @@
                         background 0.3s;
 
                     .logo_img {
-                        width: 7rem;
+                        width: 5.5rem;
                     }
                 }
 
                 .hex:hover {
-                    width: 12rem;
-                    height: 12rem;
+                    width: 10rem;
+                    height: 10rem;
                     background: white;
                     margin: 0;
                 }
 
                 .hex:hover .logo_img {
-                    width: 7.5rem;
+                    width: 6rem;
                 }
 
                 .empty-0 {
